--- a/com.coconut_palm_software.xscalawt/pom.xml
+++ b/com.coconut_palm_software.xscalawt/pom.xml
@@ -11,7 +11,7 @@
 	    <relativePath>../xscalawt.releng/pom.xml</relativePath>
 	</parent>
 
-	<groupId>es.strid</groupId>
+	<groupId>com.coconut_palm_software.xscalawt</groupId>
 	<artifactId>com.coconut_palm_software.xscalawt</artifactId>
 	<version>1.0.0</version>
 	<packaging>eclipse-plugin</packaging>
