Added scala-library as a dependency in the POM

--- a/xscalawt.releng/pom.xml
+++ b/xscalawt.releng/pom.xml
@@ -29,6 +29,14 @@
 		<module>../com.coconut_palm_software.xscalawt.site</module>
 	</modules>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>${scala.version}</version>
+		</dependency>
+	</dependencies>
+
 	<repositories>
 		<repository>
 			<id>helios</id>
@@ -360,6 +368,20 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.scala-tools</groupId>
+				<artifactId>maven-scala-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>add-source</goal>
+							<goal>compile</goal>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.sonatype.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
