--- a/com.coconut_palm_software.xscalawt/build.properties
+++ b/com.coconut_palm_software.xscalawt/build.properties
@@ -1,3 +1,5 @@
 source.. = src/
 bin.includes = META-INF/,\
                .
+customBuildCallbacks=customBuildCallbacks.xml
+customBuildCallbacks.inheritall=true
